testsuite/poke.pkl/format-diag-1.pk
/* { dg-do compile } */

format("%i0b", 0);   /* { dg-error "invalid bit-width" } */
